human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_23.wast
(assert_invalid
  (module (func $type-value-num-vs-num (result i32)
    (loop (result i32) (f32.const 0))
  ))
  "type mismatch"
)